correct navigation links, align content on reservation page

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -27,7 +27,7 @@ body {
 
 nav {
     width: 100%;
-    height: 100x;
+    height: 100px;
     background-color: #9AA6A4;
 }
 
@@ -260,7 +260,7 @@ nav a .logo-svg {
 
 .open-hours-row1-content h2 {
     font-size: 50px;
-    padding-bottom: 30px;
+    padding-bottom: 20px;
     text-transform: uppercase;
     color: #f1f1f1;
 }
@@ -318,18 +318,23 @@ nav a .logo-svg {
 /* Reservation Wrapper */
 
 .reservation-wrapper {
-    box-sizing: border-box;
     height: 500px;
     width: 100%;
+    position: absolute;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: row;
 }
 
+/* Reservation Row Content & CTA */
+
 .reservation-row1 {
     height: 500px;
     width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: #334B48;
 }
 
@@ -390,6 +395,7 @@ nav a .logo-svg {
 .reservation-img {
     width: 100%;
     height: 500px;
+    position: relative;
     background: url(/assets/images/reserve-img.jpg);
     background-size: cover;
     background-position: center;
